--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -18,7 +18,7 @@
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="{% static 'css/fontawesome.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="/static/js/accessControl.js"></script>
+    {% comment %} <script src="/static/js/accessControl.js"></script> {% endcomment %}
 
     {% block head_extra %}{% endblock head_extra %}
 
