--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <div id="department" class="card h-75 mb-3 mt-5 p-2 shadow" style="border-top: 6px solid #c0cfd0;">
+        <div id="department-filter" class="card h-75 mb-3 mt-5 p-2 shadow" style="border-top: 6px solid #c0cfd0;">
           <div id="department-container" class="row d-flex flex-wrap ms-3 my-2" style="font-weight: 500;">
             <div class="form-check col-3">
               <input 
