--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -46,6 +46,6 @@
 {% endblock content %}
 
 {% block script %}
-{% comment %} <script src="{% static 'js/register.js' %}"></script> {% endcomment %}
+<script src="{% static 'js/register.js' %}"></script>
 <script src="{% static 'js/login.js' %}"></script>
 {% endblock script %}
