--- a/core/templates/add_course.html
+++ b/core/templates/add_course.html
@@ -50,7 +50,7 @@
               <!-- User info end-->
               <div class="col-md-12">
                 <fieldset class="d-flex flex-row-reverse me-2 my-2">
-                  <button type="submit" id="form-submit" class="rounded">Add Course</button>
+                  <button type="submit" id="course-submit" class="rounded">Add Course</button>
                 </fieldset>
             </form>
           </div>
@@ -62,5 +62,5 @@
 {% endblock content %}
 
 {% block script %}
-<script src="{% static 'js/login.js' %}"></script>
+<script src="{% static 'js/add_course.js' %}"></script>
 {% endblock script %}
