--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -60,6 +60,7 @@
 
     {% comment %} <script src="{% static 'js/video.js' %}"></script> {% endcomment %}
     <script src="{% static 'js/custom.js' %}"></script>
+    <script src="{% static 'js/logout.js' %}"></script>
     {% block script %}
     {% endblock script %}
 </body>
