--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -67,12 +67,12 @@
 {% endblock content %}
 
 {% block script %}
-<script src="{% static 'js/course.js' %}"></script>
+<script src="{% static 'js/show_course.js' %}"></script>
 <script>
   // Get the video element
   var video = document.getElementById('bg-video');
 
-  // Set the video playback speed (e.g., 0.5 for half speed)
+  // Set the video playback speed
   video.playbackRate = 0.40; 
 </script>
 {% endblock script %}
